responsive css and layout for about me

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -4,5 +4,14 @@ $color-primary-dark: #192a56;
 $color-secondary: #f9f9f9;
 $color-secondary-dark: #dcdde1;
 
+$color-orange: #d35400;
+$color-yellow: #f1c40f;
+$color-blue-dark: #2980b9;
+$color-blue-light: #3498db;
+$color-pink: #bf4080;
+$color-green: #43853d;
+
 // FONT
 $default-font-size: 1.6rem;
+
+$max-width: 120rem;
