--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,9 +8,10 @@
 @import './base/utilities';
 
 @import './components/button';
-
+@import './components/card';
 
 @import './layout/navbar';
 @import './layout/header';
+@import './layout/about-me';
 
 @import './pages/home';
