--- a/css/style.css
+++ b/css/style.css
@@ -21,34 +21,82 @@ body {
   margin-bottom: 4rem; }
   .heading-primary--main {
     display: block;
-    font-size: 5rem;
+    font-size: 6rem;
     font-weight: 400;
     letter-spacing: 1.5rem; }
   .heading-primary--sub {
-    font-size: 2.5rem;
+    font-size: 2rem;
     text-transform: uppercase;
     font-weight: 700;
     display: inline-block; }
+  @media screen and (max-width: 80rem) {
+    .heading-primary--main {
+      font-size: 4rem;
+      letter-spacing: 1.3rem; }
+    .heading-primary--sub {
+      font-size: 1.8rem; } }
+  @media screen and (max-width: 50rem) {
+    .heading-primary--sub {
+      font-size: 1.6rem; } }
+
+.heading-secondary {
+  font-size: 3rem;
+  text-transform: uppercase;
+  font-weight: 400;
+  display: inline-block;
+  letter-spacing: 2px;
+  padding: 0.4rem; }
+  .heading-secondary--main {
+    display: block; }
+  @media screen and (max-width: 80rem) {
+    .heading-secondary {
+      font-size: 2.5rem; } }
+  @media screen and (max-width: 50rem) {
+    .heading-secondary {
+      font-size: 1.8rem; } }
+
+.heading-tertiary {
+  font-size: 1.6rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  margin-bottom: 1rem; }
+
+.lead {
+  font-size: 1.4rem; }
+  .lead:not(:last-child) {
+    margin-bottom: 3rem; }
+  @media screen and (max-width: 80rem) {
+    .lead {
+      font-size: 1.2rem; } }
+  @media screen and (max-width: 50rem) {
+    .lead {
+      font-size: 1rem; } }
 
 .text-center {
   text-align: center; }
+
+.container {
+  max-width: 120rem;
+  margin: 0 auto; }
 
 .btn, .btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
   padding: 0.8rem 2rem;
-  border-radius: 100px;
   cursor: pointer;
-  border: none;
+  border: 2px solid #192a56;
+  border-radius: 3px;
   font-size: 1.6rem;
   transition: all 0.2s; }
+  @media screen and (max-width: 80rem) {
+    .btn, .btn:link, .btn:visited {
+      font-size: 1.3rem; } }
 
 .btn:hover {
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2); }
 
 .btn:active, .btn:focus {
   outline: none;
-  transform: translateY(-1px);
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2); }
 
 .btn--white {
@@ -57,6 +105,13 @@ body {
   transition: all 0.2s; }
   .btn--white:hover {
     background-color: #dcdde1; }
+
+.card {
+  padding: 1rem;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.3);
+  transition: all 0.3s; }
+  .card:hover {
+    box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.3); }
 
 .navbar {
   height: 4.5rem;
@@ -87,6 +142,11 @@ body {
     .navbar__item a:hover,
     .navbar__item a:active {
       border-bottom: 2px solid #192a56; }
+  @media screen and (max-width: 80rem) {
+    .navbar {
+      justify-content: center; }
+      .navbar__logo {
+        display: none; } }
 
 .header {
   min-height: calc(100vh - 4.5rem);
@@ -94,7 +154,70 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: linear-gradient(rgba(39, 60, 117, 0.4), rgba(39, 60, 117, 0.4)), url("./../img/hero.jpg");
+  background-image: linear-gradient(rgba(39, 60, 117, 0.7), rgba(39, 60, 117, 0.7)), url("./../img/hero.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat; }
+  .header__text-box {
+    padding: 1.5rem; }
+
+.about-me__content {
+  margin-top: 2rem;
+  padding: 1.5rem;
+  display: flex; }
+
+.about-me__about-me {
+  flex: 70%;
+  margin-right: 2rem;
+  padding: 1rem; }
+
+.about-me__skills {
+  flex: 30%;
+  padding: 1rem; }
+
+.about-me__list {
+  padding: 0;
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2.5rem;
+  flex-wrap: wrap; }
+
+.about-me__item {
+  padding: 1rem;
+  text-align: center;
+  flex: 33%;
+  transition: all 0.3s; }
+  .about-me__item--html {
+    color: #d35400; }
+  .about-me__item--css {
+    color: #2980b9; }
+  .about-me__item--js {
+    color: #f1c40f; }
+  .about-me__item--react {
+    color: #2980b9; }
+  .about-me__item--scss {
+    color: #bf4080; }
+  .about-me__item--node {
+    color: #43853d; }
+  .about-me__item:hover {
+    transform: scale(1.3); }
+
+@media screen and (max-width: 80rem) {
+  .about-me__content {
+    flex-direction: column; }
+  .about-me__about-me {
+    margin-right: 0rem;
+    margin-bottom: 1.5rem; } }
+
+@media screen and (max-width: 50rem) {
+  .about-me__content {
+    padding: 0; } }
+
+.about-me {
+  background-color: #192a56;
+  padding: 2rem; }
+  @media screen and (max-width: 50rem) {
+    .about-me {
+      padding: 0; } }
