--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -8,21 +8,81 @@ body {
 .heading-primary {
   color: #fff;
   text-transform: uppercase;
-
   backface-visibility: hidden;
   margin-bottom: 4rem;
 
   &--main {
     display: block;
-    font-size: 5rem;
+    font-size: 6rem;
     font-weight: 400;
     letter-spacing: 1.5rem;
   }
 
   &--sub {
-    font-size: 2.5rem;
+    font-size: 2rem;
     text-transform: uppercase;
     font-weight: 700;
     display: inline-block;
+  }
+
+  @media screen and (max-width: 80rem) {
+    &--main {
+      font-size: 4rem;
+      letter-spacing: 1.3rem;
+    }
+
+    &--sub {
+      font-size: 1.8rem;
+    }
+  }
+
+  @media screen and (max-width: 50rem) {
+    &--sub {
+      font-size: 1.6rem;
+    }
+  }
+}
+
+.heading-secondary {
+  font-size: 3rem;
+  text-transform: uppercase;
+  font-weight: 400;
+  display: inline-block;
+  letter-spacing: 2px;
+  padding: 0.4rem;
+
+  &--main {
+    display: block;
+  }
+
+  @media screen and (max-width: 80rem) {
+    font-size: 2.5rem;
+  }
+
+  @media screen and (max-width: 50rem) {
+    font-size: 1.8rem;
+  }
+}
+
+.heading-tertiary {
+  font-size: $default-font-size;
+  font-weight: 700;
+  text-transform: uppercase;
+  margin-bottom: 1rem;
+}
+
+.lead {
+  font-size: 1.4rem;
+
+  &:not(:last-child) {
+    margin-bottom: 3rem;
+  }
+
+  @media screen and (max-width: 80rem) {
+    font-size: 1.2rem;
+  }
+
+  @media screen and (max-width: 50rem) {
+    font-size: 1rem;
   }
 }
