--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,5 +13,6 @@
 @import './layout/navbar';
 @import './layout/header';
 @import './layout/about-me';
+@import './layout/portfolio';
 
 @import './pages/home';
