--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -21,7 +21,7 @@ body {
   &--sub {
     font-size: 2rem;
     text-transform: uppercase;
-    font-weight: 700;
+    font-weight: 400;
     display: inline-block;
   }
 
@@ -37,8 +37,29 @@ body {
   }
 
   @media screen and (max-width: 50rem) {
+    &--main {
+      letter-spacing: 1.1rem;
+    }
     &--sub {
       font-size: 1.6rem;
+    }
+  }
+
+  @media screen and (max-width: 45rem) {
+    &--main {
+      letter-spacing: 1rem;
+    }
+  }
+
+  @media screen and (max-width: 40rem) {
+    &--main {
+      letter-spacing: 0.3rem;
+    }
+  }
+
+  @media screen and (max-width: 35rem) {
+    &--main {
+      letter-spacing: 0.15rem;
     }
   }
 }
@@ -80,6 +101,31 @@ body {
 
   @media screen and (max-width: 80rem) {
     font-size: 1.2rem;
+  }
+
+  @media screen and (max-width: 50rem) {
+    font-size: 1rem;
+  }
+}
+
+.extra-small {
+  font-size: 1rem;
+  margin-bottom: 1rem;
+
+  @media screen and (max-width: 80rem) {
+    font-size: 0.9rem;
+  }
+
+  @media screen and (max-width: 50rem) {
+    font-size: 0.8rem;
+  }
+}
+
+.small {
+  font-size: 1.3rem;
+
+  @media screen and (max-width: 80rem) {
+    font-size: 1.1rem;
   }
 
   @media screen and (max-width: 50rem) {
