--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -6,9 +6,8 @@
     text-decoration: none;
     padding: 0.8rem 2rem;
     cursor: pointer;
-    border: 2px solid $color-primary-dark;
-    border-radius: 3px;
-
+    border: 2px solid $color-secondary;
+    border-radius: 100px;
     font-size: $default-font-size;
     transition: all 0.2s;
 
@@ -28,12 +27,45 @@
   }
 
   &--white {
-    background-color: $color-secondary;
-    color: $color-primary-dark;
+    color: $color-secondary;
+    background-color: $color-primary-dark;
     transition: all 0.2s;
 
     &:hover {
-      background-color: $color-secondary-dark;
+      background-color: rgba($color-primary-dark, 0.5);
+    }
+  }
+
+  &--primary {
+    color: $color-primary-dark;
+    border: 2px solid $color-primary-dark !important;
+
+    &:hover {
+      background-color: rgba($color-secondary, 0.5);
+    }
+  }
+
+  &--dark {
+    color: $color-secondary;
+    background-color: $color-primary-dark;
+    transition: all 0.2s;
+
+    &:hover {
+      background-color: rgba($color-primary-dark, 0.9);
+    }
+  }
+
+  &--small {
+    margin-top: 1rem;
+    padding: 0.5rem 1rem !important;
+    font-size: 1.2rem !important;
+
+    @media screen and (max-width: 80rem) {
+      font-size: 1.1rem !important;
+    }
+
+    @media screen and (max-width: 50rem) {
+      font-size: 1rem !important;
     }
   }
 }
