--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,8 @@ body {
   text-align: center; }
 
 .container {
-  max-width: 120rem; }
+  max-width: 120rem;
+  margin: 0 auto; }
 
 .btn, .btn:link, .btn:visited {
   text-transform: uppercase;
@@ -173,9 +174,13 @@ body {
   justify-content: space-between;
   align-items: center;
   background-color: #f9f9f9; }
-  .navbar__logo img {
-    width: 2.5rem;
-    height: 2.5rem; }
+  .navbar__logo {
+    transition: all 0.3s; }
+    .navbar__logo img {
+      width: 2.5rem;
+      height: 2.5rem; }
+    .navbar__logo:hover, .navbar__logo:active {
+      transform: scale(1.1); }
   .navbar__menu {
     display: flex;
     list-style: none;
@@ -195,6 +200,10 @@ body {
     .navbar__item a:hover,
     .navbar__item a:active {
       border-bottom: 2px solid #192a56; }
+    .navbar__item--resume a {
+      border: 2px solid #192a56 !important; }
+      .navbar__item--resume a:hover, .navbar__item--resume a:active {
+        background-color: rgba(25, 42, 86, 0.1); }
   @media screen and (max-width: 80rem) {
     .navbar {
       justify-content: center; }
@@ -213,9 +222,6 @@ body {
   background-repeat: no-repeat; }
   .header__text-box {
     padding: 1.5rem; }
-
-.about-me .container {
-  margin: 0 auto; }
 
 .about-me__content {
   margin-top: 2rem;
@@ -271,42 +277,75 @@ body {
   .about-me__content {
     padding: 0; } }
 
-.portfolio {
-  margin: 0 auto; }
-  .portfolio__header h2 {
-    display: block;
-    text-align: center;
-    margin-bottom: 2rem; }
-  .portfolio__showcase {
-    margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center; }
-    @media screen and (max-width: 70rem) {
-      .portfolio__showcase {
-        flex-direction: column; } }
-  .portfolio__item {
-    flex: 32%;
-    padding: 1rem;
-    margin: 0.5rem;
-    overflow: hidden; }
-  .portfolio__img {
-    width: 100%;
-    height: 25rem;
-    object-fit: cover;
-    filter: brightness(90%);
-    transition: all 0.3s;
-    margin-bottom: 1rem; }
-    .portfolio__img:hover {
-      transform: scale(1.03);
-      filter: brightness(100%); }
-  .portfolio__btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 1rem 0; }
-    .portfolio__btn > *:not(:last-child) {
-      margin-right: 0.5rem; }
+.portfolio__header h2 {
+  display: block;
+  text-align: center;
+  margin-bottom: 2rem; }
+
+.portfolio__showcase {
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center; }
+  @media screen and (max-width: 70rem) {
+    .portfolio__showcase {
+      flex-direction: column; } }
+
+.portfolio__item {
+  flex: 32%;
+  padding: 1rem;
+  margin: 0.5rem;
+  overflow: hidden; }
+
+.portfolio__img {
+  width: 100%;
+  height: 25rem;
+  object-fit: cover;
+  filter: brightness(90%);
+  transition: all 0.3s;
+  margin-bottom: 1rem; }
+  .portfolio__img:hover {
+    transform: scale(1.03);
+    filter: brightness(100%); }
+
+.portfolio__btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 1rem 0; }
+  .portfolio__btn > *:not(:last-child) {
+    margin-right: 0.5rem; }
+
+.contact .container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
+
+.contact__header {
+  margin-bottom: 2rem; }
+
+.contact__phone, .contact__email {
+  font-size: 1.6rem;
+  margin-bottom: 1rem; }
+  .contact__phone i, .contact__email i {
+    margin-right: 0.5rem; }
+
+.contact__links {
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+  width: 20rem; }
+
+.contact__item {
+  font-size: 1.6rem; }
+  .contact__item a {
+    color: #f9f9f9; }
+  .contact__item, .contact__item:link, .contact__item:visited {
+    text-decoration: none;
+    transition: all 0.3s; }
+  .contact__item:hover, .contact__item:active {
+    transform: scale(1.2); }
 
 .about-me {
   background-color: #192a56;
@@ -322,3 +361,7 @@ body {
   @media screen and (max-width: 70rem) {
     .portfolio {
       padding: 0.5rem; } }
+
+.contact {
+  padding: 1.5rem;
+  background-color: #192a56; }
