--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,5 +14,6 @@
 @import './layout/header';
 @import './layout/about-me';
 @import './layout/portfolio';
+@import './layout/contact';
 
 @import './pages/home';
