--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,5 +15,6 @@
 @import './layout/about-me';
 @import './layout/portfolio';
 @import './layout/contact';
+@import './layout/footer';
 
 @import './pages/home';
