--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -20,4 +20,15 @@
 .contact {
   padding: 1.5rem;
   background-color: $color-primary-dark;
+
+  @media screen and (max-width: 70rem) {
+    padding: 0.5rem;
+  }
+}
+
+.footer {
+  font-size: 1.4rem;
+  padding: 1rem;
+  background-color: $color-secondary;
+  color: $color-primary;
 }
