--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -12,6 +12,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
 
     @media screen and (max-width: 70rem) {
       flex-direction: column;
@@ -27,24 +28,20 @@
 
   &__img {
     width: 100%;
-    height: 25rem;
+    height: 20rem;
 
     object-fit: cover;
     filter: brightness(90%);
     transition: all 0.3s;
 
     &:hover {
-      transform: scale(1.03);
+      transform: scale(1.02);
       filter: brightness(100%);
     }
     margin-bottom: 1rem;
 
     @media screen and (max-width: 60rem) {
-      height: 20rem;
-    }
-
-    @media screen and (max-width: 40rem) {
-      height: 15rem;
+      height: 16rem;
     }
   }
 
