--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -42,15 +42,14 @@ body {
       font-size: 1.6rem; } }
   @media screen and (max-width: 45rem) {
     .heading-primary--main {
-      letter-spacing: 1rem; } }
+      font-size: 3.5rem; } }
   @media screen and (max-width: 40rem) {
     .heading-primary--main {
-      font-size: 3.5rem;
-      letter-spacing: 0.3rem; } }
+      font-size: 3rem; } }
   @media screen and (max-width: 35rem) {
     .heading-primary--main {
-      font-size: 3rem;
-      letter-spacing: 0.12rem; } }
+      font-size: 2.5rem;
+      letter-spacing: 0.4rem; } }
 
 .heading-secondary {
   font-size: 3rem;
@@ -306,7 +305,8 @@ body {
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center; }
+  justify-content: center;
+  align-items: center; }
   @media screen and (max-width: 70rem) {
     .portfolio__showcase {
       flex-direction: column; } }
@@ -319,20 +319,17 @@ body {
 
 .portfolio__img {
   width: 100%;
-  height: 25rem;
+  height: 20rem;
   object-fit: cover;
   filter: brightness(90%);
   transition: all 0.3s;
   margin-bottom: 1rem; }
   .portfolio__img:hover {
-    transform: scale(1.03);
+    transform: scale(1.02);
     filter: brightness(100%); }
   @media screen and (max-width: 60rem) {
     .portfolio__img {
-      height: 20rem; } }
-  @media screen and (max-width: 40rem) {
-    .portfolio__img {
-      height: 15rem; } }
+      height: 16rem; } }
 
 .portfolio__btn {
   display: flex;
@@ -373,13 +370,16 @@ body {
   .contact__item:hover, .contact__item:active {
     transform: scale(1.2); }
 
+@media screen and (max-width: 60rem) {
+  .contact__header {
+    margin-bottom: 1.5rem; }
+  .contact__phone, .contact__email, .contact__item {
+    font-size: 1.3rem; } }
+
 .footer .container {
   display: flex;
   justify-content: space-between;
   align-items: center; }
-  @media screen and (max-width: 70rem) {
-    .footer .container {
-      padding: 0.5rem; } }
   @media screen and (max-width: 60rem) {
     .footer .container {
       font-size: 1.1rem; } }
@@ -425,6 +425,9 @@ body {
 
 .footer {
   font-size: 1.4rem;
-  padding: 1rem;
+  padding: 0.8rem;
   background-color: #f9f9f9;
   color: #273c75; }
+  @media screen and (max-width: 50rem) {
+    .footer {
+      padding: 0.2rem; } }
