fix portfolio small section

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -138,6 +138,7 @@ body {
 .small {
   hyphens: auto;
   font-size: 1.3rem;
+  min-height: 9rem;
 
   @media screen and (max-width: 80rem) {
     font-size: 1.1rem;
