--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -138,13 +138,15 @@ body {
 .small {
   hyphens: auto;
   font-size: 1.3rem;
-  min-height: 9rem;
+  height: 12rem;
 
   @media screen and (max-width: 80rem) {
     font-size: 1.1rem;
+    height: 6.5rem;
   }
 
   @media screen and (max-width: 50rem) {
     font-size: 1rem;
+    height: 7.5rem;
   }
 }
