--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -5,11 +5,8 @@
   justify-content: center;
   align-items: center;
 
-  background-image: linear-gradient(
-      rgba($color-primary, 0.7),
-      rgba($color-primary, 0.7)
-    ),
-    url('./../img/hero.jpg');
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url('./../img/tech.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
