--- a/css/style.css
+++ b/css/style.css
@@ -115,6 +115,10 @@ body {
     .small {
       font-size: 1rem;
       height: 7.5rem; } }
+  @media screen and (max-width: 40rem) {
+    .small {
+      font-size: 1rem;
+      height: 10rem; } }
 
 .text-center {
   text-align: center; }
