--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -149,4 +149,9 @@ body {
     font-size: 1rem;
     height: 7.5rem;
   }
+
+  @media screen and (max-width: 40rem) {
+    font-size: 1rem;
+    height: 10rem;
+  }
 }
