--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -115,6 +115,10 @@ body {
     .small {
       font-size: 1rem;
       height: 7.5rem; } }
+  @media screen and (max-width: 40rem) {
+    .small {
+      font-size: 1rem;
+      height: 10rem; } }
 
 .text-center {
   text-align: center; }
@@ -238,7 +242,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: linear-gradient(rgba(39, 60, 117, 0.7), rgba(39, 60, 117, 0.7)), url("./../img/hero.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("./../img/tech.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat; }
